--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "redux": "^4.0.3",
     "redux-firestore": "^0.5.8",
     "redux-thunk": "^2.3.0",
-    "@fortawesome/fontawesome-free": "^5.3.1"
+    "@fortawesome/fontawesome-free": "^5.3.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
